--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "author": "Akira Ohgaki",
   "license": "BSD-2-Clause",
   "homepage": "https://github.com/akiraohgaki/chirit",
-  "repository": "https://github.com/akiraohgaki/chirit",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/akiraohgaki/chirit.git"
+  },
   "main": "dist/Chirit.js",
   "scripts": {
     "build": "tsc",
