--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ES2017",
     "module": "ESNext",
     "lib": [
       "ESNext",
@@ -8,6 +8,7 @@
     ],
     "allowJs": false,
     "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
     "removeComments": true,
     "strict": true,
