--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "npm run clean && npm run tsc",
     "watch": "npm run tsc-watch",
     "tsc": "tsc",
-    "tsc-watch": "tsc -w"
+    "tsc-watch": "tsc -w",
+    "server": "node server.js"
   },
   "devDependencies": {
     "typescript": "*"
