--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "main": "dist/chirit.js",
   "types": "dist/chirit.d.ts",
   "scripts": {
-    "clean": "rm -rf dist",
+    "prebuild": "npm run clean && npm run lint",
     "build": "tsc",
     "watch": "tsc -w",
+    "clean": "rm -rf dist",
+    "lint": "tsc --noEmit && eslint --ext '.ts' ./src",
     "server": "node server.js"
   },
   "devDependencies": {
-    "typescript": "*"
+    "typescript": "*",
+    "eslint": "*",
+    "@typescript-eslint/parser": "*",
+    "@typescript-eslint/eslint-plugin": "*"
   }
 }
