--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "homepage": "https://github.com/akiraohgaki/chirit",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/akiraohgaki/chirit.git"
+        "url": "https://github.com/akiraohgaki/chirit.git"
     },
     "type": "module",
     "main": "dist/chirit.js",
@@ -26,6 +26,6 @@
         "@typescript-eslint/parser": "*",
         "@typescript-eslint/eslint-plugin": "*",
         "@types/node": "*",
-        "simple-dev-server": "https://github.com/akiraohgaki/simple-dev-server.git#v1.0.0"
+        "simple-dev-server": "git+https://github.com/akiraohgaki/simple-dev-server.git#v1.0.0"
     }
 }
