--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "eslint": "*",
         "@typescript-eslint/parser": "*",
         "@typescript-eslint/eslint-plugin": "*",
-        "@types/node": "*",
-        "simple-dev-server": "git+https://github.com/akiraohgaki/simple-dev-server.git"
+        "simple-dev-server": "git+https://github.com/akiraohgaki/simple-dev-server.git",
+        "@types/node": "*"
     }
 }
