--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "main": "dist/chirit.js",
     "types": "dist/chirit.d.ts",
     "scripts": {
+        "start": "node server.js",
+        "clean": "rm -rf dist",
+        "lint": "npm run lint:tsc && npm run lint:eslint",
+        "lint:tsc": "tsc --noEmit",
+        "lint:eslint": "eslint --ext '.ts' src",
         "prebuild": "npm run clean && npm run lint",
         "build": "tsc",
-        "watch": "tsc -w",
-        "clean": "rm -rf dist",
-        "lint": "tsc --noEmit && eslint --ext '.ts' ./src",
-        "start": "node server.js"
+        "watch": "tsc -w"
     },
     "devDependencies": {
         "simple-dev-server": "https://github.com/akiraohgaki/simple-dev-server/archive/refs/heads/main.tar.gz",
