--- a/deno.json
+++ b/deno.json
@@ -51,9 +51,9 @@
     }
   },
   "tasks": {
-    "clear": "rm -rf dist && mkdir dist",
+    "clean": "rm -rf dist && mkdir dist",
     "bundle": "deno bundle src/mod.ts dist/mod.bundle.js",
     "test": "echo 'Skip test'",
-    "build": "deno fmt && deno lint && deno task clear && deno task bundle && deno task test"
+    "build": "deno fmt && deno lint && deno task clean && deno task bundle && deno task test"
   }
 }
