--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   push:
@@ -11,7 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: denoland/setup-deno@v1
+    - name: Setup Deno
+      uses: denoland/setup-deno@v1
       with:
         deno-version: vx.x.x
 
