--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
       "deno.ns",
       "esnext",
       "dom",
-      "dom.iterable"
+      "dom.iterable",
+      "dom.asynciterable"
     ],
     "strict": true,
     "noUnusedLocals": true,
