--- a/deno.json
+++ b/deno.json
@@ -19,7 +19,6 @@
     "files": {
       "include": [
         "src/",
-        "test/",
         "mod.ts",
         "version.ts"
       ]
@@ -40,7 +39,6 @@
     "files": {
       "include": [
         "src/",
-        "test/",
         "mod.ts",
         "version.ts"
       ]
@@ -56,7 +54,7 @@
   "test": {
     "files": {
       "include": [
-        "test/"
+        "src/"
       ]
     }
   },
