--- a/deno.json
+++ b/deno.json
@@ -20,8 +20,7 @@
       "include": [
         "src/",
         "mod.ts",
-        "version.ts",
-        "bundle.ts"
+        "version.ts"
       ]
     },
     "rules": {
@@ -41,8 +40,7 @@
       "include": [
         "src/",
         "mod.ts",
-        "version.ts",
-        "bundle.ts"
+        "version.ts"
       ]
     },
     "options": {
@@ -61,7 +59,8 @@
     }
   },
   "tasks": {
-    "bundle": "deno run --allow-env --allow-read --allow-write --allow-net bundle.ts",
-    "build": "deno fmt && deno lint && deno test && deno task bundle"
+    "clean": "echo 'Skip clean task'",
+    "bundle": "deno run --allow-env --allow-read --allow-write --allow-net scripts/bundle.ts mod.ts mod.bundle.js",
+    "build": "deno task clean && deno fmt && deno lint && deno test && deno task bundle"
   }
 }
