--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 deno.lock
+
+package-lock.json
+node_modules/
+
+/tests/app/mod.bundle.js
+
+/tests/e2e/test-results/
+/tests/e2e/playwright-report/
+/tests/e2e/blob-report/
+/tests/e2e/playwright/.cache/
