--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,17 +51,16 @@ jobs:
       - name: Install dependencies
         run: |
           cd tests
-          npm ci
+          npm install
           npx playwright install --with-deps
 
       - name: Test
         run: |
-          cd tests
-          npm run test
+          deno task test
 
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
-          path: tests/playwright-report/
+          path: tests/e2e/playwright-report/
           retention-days: 30
