--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd tests
+          cd tests/e2e
           npm install
           npx playwright install --with-deps
 
