--- a/deno.json
+++ b/deno.json
@@ -53,14 +53,15 @@
   "tasks": {
     "clean": "echo 'Skip task: clean'",
     "bundle": "deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
-    "build": "deno task clean && deno fmt && deno lint && deno test && deno task bundle",
-    "tests:app:bundle": "cd tests/app && deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
-    "tests:app:serve": "cd tests/app && deno run --allow-net --allow-read server.ts",
-    "tests:e2e:test": "cd tests/e2e && npx playwright test",
-    "tests:e2e:test:chromium": "cd tests/e2e && npx playwright test --project chromium",
-    "tests:e2e:test:firefox": "cd tests/e2e && npx playwright test --project firefox",
-    "tests:e2e:test:webkit": "cd tests/e2e && npx playwright test --project webkit",
-    "test": "deno task tests:app:bundle && deno task tests:e2e:test"
+    "build": "deno task clean && deno fmt && deno lint && deno task bundle",
+    "test": "deno test && deno task test:e2e",
+    "test:app": "deno task test:app:bundle && deno task test:app:serve",
+    "test:app:bundle": "cd tests/app && deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
+    "test:app:serve": "cd tests/app && deno run --allow-net --allow-read server.ts",
+    "test:e2e": "cd tests/e2e && npx playwright test",
+    "test:e2e:chromium": "deno task test:e2e --project chromium",
+    "test:e2e:firefox": "deno task test:e2e --project firefox",
+    "test:e2e:webkit": "deno task test:e2e --project webkit"
   },
   "imports": {
     "std/": "https://deno.land/std/",
