--- a/deno.json
+++ b/deno.json
@@ -56,7 +56,7 @@
     "build": "deno task clean && deno fmt && deno lint && deno task bundle",
     "test": "deno test && deno task test:e2e",
     "test:app": "deno task test:app:bundle && deno task test:app:serve",
-    "test:app:bundle": "cd tests/app && deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
+    "test:app:bundle": "cd tests/app && deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts main.ts main.bundle.js",
     "test:app:serve": "cd tests/app && deno run --allow-net --allow-read server.ts",
     "test:e2e": "cd tests/e2e && npx playwright test",
     "test:e2e:chromium": "deno task test:e2e --project chromium",
