--- a/deno.json
+++ b/deno.json
@@ -51,17 +51,20 @@
     ]
   },
   "tasks": {
-    "build": "deno task build:setup && deno fmt && deno lint && deno task build:bundle",
+    "build": "deno task build:setup && deno task build:fix && deno task build:bundle && deno task build:teardown",
     "build:setup": "echo 'Skip task build:setup'",
+    "build:fix": "deno fmt && deno lint",
     "build:bundle": "deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
-    "test": "deno test && deno task test:e2e",
+    "build:teardown": "echo 'Skip task build:teardown'",
+    "test": "deno task test:setup && deno task test:unit && deno task test:e2e && deno task test:teardown",
+    "test:setup": "echo 'Skip task test:setup'",
+    "test:unit": "deno test",
     "test:e2e": "cd tests/e2e && npx playwright test",
-    "test:e2e:chromium": "deno task test:e2e --project chromium",
-    "test:e2e:firefox": "deno task test:e2e --project firefox",
-    "test:e2e:webkit": "deno task test:e2e --project webkit",
+    "test:teardown": "echo 'Skip task test:teardown'",
     "test:app": "deno task test:app:bundle && deno task test:app:serve",
     "test:app:bundle": "cd tests/app && deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts main.ts main.bundle.js",
-    "test:app:serve": "cd tests/app && deno run --allow-net --allow-read server.ts"
+    "test:app:serve": "cd tests/app && deno run --allow-net --allow-read server.ts",
+    "serve": "echo 'Skip task serve'"
   },
   "imports": {
     "std/": "https://deno.land/std/",
