--- a/deno.json
+++ b/deno.json
@@ -57,7 +57,7 @@
     "build:bundle": "deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
     "build:teardown": "echo 'Skip task build:teardown'",
     "test": "deno task test:setup && deno task test:unit && deno task test:e2e && deno task test:teardown",
-    "test:setup": "echo 'Skip task test:setup'",
+    "test:setup": "cd tests/e2e && npm install && npx playwright install --with-deps",
     "test:unit": "deno test",
     "test:e2e": "cd tests/e2e && npx playwright test",
     "test:teardown": "echo 'Skip task test:teardown'",
