--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ deno.lock
 package-lock.json
 node_modules/
 
-/tests/app/mod.bundle.js
+/tests/app/main.bundle.js
 
 /tests/e2e/test-results/
 /tests/e2e/playwright-report/
