--- a/deno.json
+++ b/deno.json
@@ -66,17 +66,16 @@
   "tasks": {
     "build": "deno task build:setup && deno task build:bundle && deno task build:teardown",
     "build:setup": "echo 'Skip task build:setup'",
-    "build:bundle": "deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts mod.ts mod.bundle.js",
+    "build:bundle": "deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts --minify=true mod.ts mod.bundle.js",
     "build:teardown": "echo 'Skip task build:teardown'",
     "test": "deno task test:setup && deno task test:unit && deno task test:e2e && deno task test:teardown",
     "test:setup": "cd tests/e2e && npm install && npx playwright install --with-deps",
     "test:unit": "deno test tests/unit/",
     "test:e2e": "cd tests/e2e && npx playwright test",
     "test:teardown": "echo 'Skip task test:teardown'",
-    "serve": "cd tests/playground && deno run --allow-env --allow-read --allow-write --allow-net server.ts"
+    "serve": "deno run --allow-env --allow-read --allow-write --allow-net jsr:@akiraohgaki/devsrv/server ./tests/playground"
   },
   "imports": {
-    "@deno/emit": "jsr:@deno/emit",
     "@std/assert": "jsr:@std/assert",
     "jsdom": "https://jspm.dev/jsdom"
   }
