--- a/deno.json
+++ b/deno.json
@@ -68,16 +68,17 @@
     ]
   },
   "tasks": {
+    "check": "deno fmt && deno lint && deno check mod.ts types.ts",
     "build": "deno task build:setup && deno task build:bundle && deno task build:teardown",
     "build:setup": "echo 'Skip task build:setup'",
-    "build:bundle": "deno run --allow-env --allow-read --allow-write --allow-net https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts --minify=true mod.ts mod.bundle.js",
+    "build:bundle": "deno run -A https://raw.githubusercontent.com/akiraohgaki/helper-script/main/deno-bundle.ts --minify=true mod.ts mod.bundle.js",
     "build:teardown": "echo 'Skip task build:teardown'",
     "test": "deno task test:setup && deno task test:unit && deno task test:e2e && deno task test:teardown",
     "test:setup": "cd tests/e2e && npm install && npx playwright install --with-deps",
     "test:unit": "deno test tests/unit/",
     "test:e2e": "cd tests/e2e && npx playwright test",
     "test:teardown": "echo 'Skip task test:teardown'",
-    "serve": "deno run --allow-env --allow-read --allow-write --allow-net jsr:@akiraohgaki/devsrv/server ./tests/playground"
+    "serve": "deno run -A jsr:@akiraohgaki/devsrv/server tests/playground"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert",
