--- a/deno.json
+++ b/deno.json
@@ -53,6 +53,7 @@
       "src/",
       "tests/",
       "*.ts",
+      "*.json",
       "*.md"
     ],
     "useTabs": false,
@@ -68,14 +69,14 @@
     ]
   },
   "tasks": {
-    "check": "deno fmt && deno lint && deno check mod.ts",
+    "check": "deno fmt && deno lint && deno check mod.ts dom.ts",
     "build": "deno task build:setup && deno task build:bundle && deno task build:teardown",
     "build:setup": "echo 'Skip task build:setup'",
     "build:bundle": "deno run -A jsr:@akiraohgaki/devsrv/bundle --minify=true mod.ts mod.bundle.js",
     "build:teardown": "echo 'Skip task build:teardown'",
     "test": "deno task test:setup && deno task test:unit && deno task test:e2e && deno task test:teardown",
     "test:setup": "cd tests/e2e && npm install && npx playwright install --with-deps",
-    "test:unit": "deno test tests/unit/",
+    "test:unit": "deno test -A tests/unit/",
     "test:e2e": "cd tests/e2e && npx playwright test",
     "test:teardown": "echo 'Skip task test:teardown'",
     "serve": "deno run -A jsr:@akiraohgaki/devsrv/serve tests/playground"
