--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 deno.lock
 
-package-lock.json
 node_modules/
 
-/tests/e2e/test-results/
-/tests/e2e/playwright-report/
-/tests/e2e/blob-report/
-/tests/e2e/playwright/.cache/
+/coverage/
+
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
