--- a/deno.json
+++ b/deno.json
@@ -2,14 +2,12 @@
   "name": "@akiraohgaki/chirit",
   "version": "1.9.3",
   "exports": {
-    ".": "./mod.ts",
-    "./dom": "./dom.ts"
+    ".": "./mod.ts"
   },
   "publish": {
     "include": [
       "src/**/*.ts",
       "mod.ts",
-      "dom.ts",
       "deno.json",
       "README.md",
       "LICENSE"
@@ -69,7 +67,7 @@
     ]
   },
   "tasks": {
-    "check": "deno fmt && deno lint && deno check mod.ts dom.ts",
+    "check": "deno fmt && deno lint && deno check mod.ts",
     "build": "deno task build:setup && deno task build:bundle && deno task build:teardown",
     "build:setup": "echo 'Skip task build:setup'",
     "build:bundle": "deno run -A jsr:@akiraohgaki/devsrv/bundle --minify=true mod.ts mod.bundle.js",
